<resources>
    <string name="surrender">Player Surrendered!</string>
    <string name="surrender_msg">Game over! Player surrendered</string>
    <string name="winning_message">Congratulations! You Won The Game! ~~~~~~~~~~~~~~~~</string>
    <string name="app_name">Project Two</string>
    <string name="surrenderButton">Surrender</string>
    <string name="input_player1">Enter Player1 Display Name</string>
    <string name="input_player2">Enter Player2 Display Name</string>
    <string name="button_main_text">Start Game</string>
    <string name="button_done_text">Done</string>
    <string name="setupImage">Setup Image</string>
    <string name="setupMessage">Place all your ships and press Done when ready! Game will commence when both players are ready.</string>
    <string name="placeholder">placeHolder</string>
    <string name="restart">Restart</string>
    <string name="player_move">player is attacking a square</string>
    <string name="setup_player">Place your ships!</string>
    <string name="turn_done">Done</string>
    <string name="menu_play">How to Play</string>
    <string name="ok">OK</string>
    <string name="how_to_play">In this game of Battleship, you and one other player will try to sink each other\'s battleships. You will choose where to hide them, then take turns guessing where the ships lie. The first person to find every ship, or not surrender, wins!</string>
    <string name="attack_text">Click on a square to attack!</string>
    <string name="create_game">Create Game</string>
    <string name="Login">Login</string>
    <string name="enter_username">Username</string>
    <string name="enter_password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="client_response_txt">Username or password is incorrect, please try again. \n If you do not have an account, create one below!</string>
    <string name="make_account">Make Account</string>
    <string name="enter_password_again">Confirm Password</string>
    <string name="after_login_title">Current Active Games (Number)</string>
    <string name="game_listing">Open Game</string>
    <string name="game_item_text">game created by: user</string>
    <string name="game_create_error">Error Creating Game Justin :(</string>
    <string name="notify">Notification!</string>
    <string name="leave_message">Your Opponent Left The Game!</string>
    <string name="setup_waiting">Waiting For Your Opponent To Setup</string>
    <string name="waiting">Waiting For Your Opponent Move</string>
    <string name="not_match">Passwords do not match!</string>
    <string name="user_exists">Username already exists!</string>
    <string name="enter_username_please">Please enter a username</string>
    <string name="login">Please enter a username and password to login</string>
    <string name="remember_me">Remember Me</string>
    <string name="join_error">Failed to Join Game</string>
    <string name="waitDlgTitle">Waiting for Another Player to join your game</string>
    <string name="waitDlgSetupTitle">Waiting for Opponent to finish board setup</string>
    <string name="waitDlgTurnTitle">Waiting for Opponent to finish turn</string>
    <string name="back_to_login">Exit to Login</string>

    <string name="other_player_surrendered">You Win, Opponent Surrendered!</string>
    <string name="this_player_surrendered">You Lose, You Surrendered!</string>
    <string name="other_player_won">You Lose, Opponent Sunk All Your Ships!</string>
    <string name="this_player_won">You Win, You Sunk Your Opponent\'s Ships!</string>
    <string name="other_player_timeout">You Win, Opponent Timed Out!</string>
    <string name="this_player_timeout">You Lose, You Timed Out!</string>
    <string name="game_ended">Game Ended!</string>
    <string name="exit_to_login">Exit to Login Screen</string>
    <string name="logged_in_as">Logged in as: (name)</string>
    <string name="error_update_turn">Failed to Submit</string>
    <string name="error_save">Failed to Submit</string>
</resources>