<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gameView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom|center"
    tools:context=".GameActivity">

    <TextView
        android:id="@+id/player_move_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/player_move"
        android:textSize="20sp" />

    <view
        android:id="@+id/setupViewP"
        class="edu.msu.team9.proj1.GameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/surrender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/setupViewP"
        android:layout_centerInParent="true"
        android:onClick="onSurrender"
        android:text="@string/surrenderButton"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/turnDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/surrender"
        android:layout_alignStart="@id/surrender"
        android:layout_alignEnd="@id/surrender"
        android:layout_centerInParent="true"
        android:onClick="onDone"
        android:text="@string/turn_done"
        tools:ignore="TouchTargetSizeCheck" />
</RelativeLayout>